style.css
body {
  margin: 0;
  padding: 0;
  text-align: center;
}
/* Header */
header {
  background-color: #f1efe9;
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-wrap: wrap;
}

.logo {
  width: 150px;
  border-radius: 10%;
  margin: 0 2px;
}

header h1 {
  font-family: 'Indie Flower', cursive;
  font-size: 48px; 
  margin: 20px 0;
}

nav {
  display: none;
}

nav a {
  color: #000;
  text-decoration: none;
  margin-left: 12px;
  
}

nav a :hover {
  color: #44bfed;
}

.hamburger {
  display: flex; 
  width: 30px;
  height: 30px; 
  flex-direction: column;
  justify-content: space-between;
}

.hamburger div {
  width: 30px;
  height: 5px;
  background: #000;
}

/* Main Content */

.container .main-news .main-flex-box {
  border-bottom: 2px solid #44bfed;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-bottom: 50px;
}

h2 {
  font-family: 'Indie Flower', cursive;
  color: #44bfed;
  margin-top: 8px;
  margin-bottom: 0;
}

h3 {
  margin: 5px auto;
  font-family: 'Roboto Mono', monospace;
  font-size: 16px;
}

h4 {
  font-family: 'Roboto Mono', monospace;
  font-size: 14px;
}

.main-news-img {
  width: 100%;
}

.main-news p {
  font-family: 'Roboto Mono', monospace;
  width: 98%;
  text-align: left;
}

.main-news a {
  color: #44bfed;;
  text-decoration: none;
  font-weight: bold;
}

.other-news {
  border-bottom: 2px solid #44bfed;
  padding: 0 5px;
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  flex-direction: column;
}

.flex-child {
  width: 95%;
  margin: 5px;
  display: flex;
  flex-direction: column;
  align-items: center;
  box-shadow: 0 2.1rem 2rem rgba(0,0,0,0.4);
  margin-bottom: 40px;
}

.flex-child img {
  width: 85%;
  max-width: 400px;
  padding: 0 auto;
}

.other-news .flex-child a {
  text-decoration: none;
  color: #000;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

/* FOOTER */

footer {
  background-color: #1d2125;
  margin-top: 50px;
  padding-top: 30px;
  color: #f1efe9;
  font-family: 'Roboto Mono', monospace;
  height: 100px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-evenly;
  
}

footer p {
  font-size: 9px;
}

footer a {
  color: #f1efe9;
  text-decoration: none;
}


label {
  padding-bottom: 50px;
}

.submit-btn {
  height: 30px;
  width: 70px;
  background-color: #44bfed;
  font-family: Helvetica, sans-serif;
  color: #fff;
  font-weight: bold;
  text-align: center;
  border:none;
  border-radius: 15px;

}

.submit-btn:hover {
  color: #000000;
  background-color: #04a6e0; 
}

/* MEDIA QUERY TABLET */

@media (min-width: 768px) {
  .main-news .main-flex-box {
    flex-direction: row;
    margin-top: 12px;
  }

  .main-news-img {
    width: 60%;
    padding-bottom: 5px;
  }
  
  .main-news .main-flex-box p {
    text-align: left;
    padding-left: 20px;
  }

  .container .main-news .main-flex-box {
    flex-direction: row;
  }

  .other-news {
    flex-direction: row;
    flex-wrap: wrap;
  }

  .flex-child {
    width: 45%;
}

/* MEDIA QUERY DESKTOP */

@media (min-width: 1024px) {
  .hamburger {
    display: none;
  }

  nav {
    display: flex;    
    justify-content: space-between;
    width: 350px;
    font-size: 13px;
    font-family: 'Roboto Mono', monospace;
    margin-right: 5px;
  }

  header {
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
    padding: 0 50px;
  }

  header h1 {
    font-family: 'Indie Flower', cursive;
    font-size: 60px;    
  }

  .logo {
    width: 180px; 
  }

  body {
    text-align: left;
  }

  .container {
    width: 90%;
    margin-left: auto;
    margin-right: auto;
  }

  .main-news-img {
    width: 45%x;
    max-width: 650px;
  }
  
  .container .main-news .main-flex-box img {
    padding-bottom: 20px;
  }
  .main-news .main-flex-box p {
    padding-left: 20px;
    width: 40%;
    max-width: 600px;
    font-size: 16px;
    margin-left: auto;
    margin-right: auto;
  }

  .main-news a:hover {
    color: #000;
  }

  h2 {
    margin-top: 30px;
    margin-bottom: 20px;;
  }

  h4 {
    padding-left: 25px;
    padding-right: 20px;
  }

  .flex-child {
    width: 23%;
    border: none;
    box-shadow: 0 2.1rem 2rem rgba(0,0,0,0.4);
    margin-bottom: 40px;
  }

  /* CARD ANIMATION */

  @keyframes push {
    50% {
      transform: translatey(15px);
    }
  }

  .flex-child:hover {
    animation-name: push;
    animation-duration: 2s;
  }
}

